fixed horizontal scroll and added cover letter page

--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,14 @@
 .top {
     width: 100%;
     min-height: 100%;
-    background-image: url("../img/annenberg_purple.jpg");
+/*    background-image: url("../img/annenberg_purple.jpg");*/
     background-size: cover;
     padding: 0;
 }
 
 .title {
     text-align: center;
-    color: #fff;
+/*    color: #fff;*/
 }
 
 .title h1 {
@@ -27,7 +27,7 @@
 }
 
 .more {
-    color: #fff;
+/*    color: #fff;*/
     position: absolute;
     bottom: 10px;
     width: 300px;
@@ -48,7 +48,7 @@
 }
 
 .more a {
-    color: #fff;
+    color: #777;
 }
 
 .second {
@@ -361,18 +361,17 @@ hr {
 }
 
 .slider {
-    width: 90%;
+    width: 100%;
     height: 600px;
     margin: 0 auto;
-    overflow: hidden;
+    overflow: scroll;
     position: relative;
 }
 
 .slide {
-    width: 100%;
+    width: 80%;
     height: 100%;
     background-color: #333;
-    margin: 0 auto;
     position: absolute;
 }
 
@@ -412,7 +411,7 @@ hr {
 }
 
 #slide-two {
-    left: 100%;
+    left: 95%;
 }
 
 #slide-left {
@@ -434,4 +433,17 @@ hr {
 #pause {
     font-size: 20em;
     color: #ddd;
+}
+#slide-one {
+    left: 10%;
+}
+
+#last {
+    width: 10%;
+    left: 260%;
+    background-color: #fff;
+}
+
+#slide-three {
+    left: 180%;
 }
